[package]
name = "zephir-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
fern = "0.6"
log = "0.4"
chrono = "0.4"
zstd = "0.12" 
tar = "0.4"
walkdir = "2.5"
async-compression = { version = "0.4", features = ["tokio", "zstd"] }
tokio-tar = "0.3.1"
nix = { version="0.30.1", features=["user", "fs"] }
libc = "0.2.175"
libseccomp = "0.4.0"     
anyhow = "1.0.22"
rlimit = "0.10.2"
clap = { version = "4", features = ["derive"] }
env_logger = "0.10"
wasmtime = "37"
wasmtime-wasi = "37"
